[gd_scene load_steps=27 format=3 uid="uid://bo7rdr8ov4kht"]

[ext_resource type="Texture2D" uid="uid://ucb16grtbnyu" path="res://sprites/world/cosmo_cave_bg.png" id="1_q5onr"]
[ext_resource type="Texture2D" uid="uid://drgngv01g7ms5" path="res://sprites/critter/slime_bouncer_2.png" id="2_4wyf3"]
[ext_resource type="Texture2D" uid="uid://dlcruvei03e2b" path="res://sprites/world/cosmo_cavennection.png" id="2_jhx03"]
[ext_resource type="Texture2D" uid="uid://cia0ulw6cb63q" path="res://sprites/world/cosmo_forest_bg.png" id="2_o8fc1"]
[ext_resource type="Script" uid="uid://dtkr15pwhbiau" path="res://scenes/slime.gd" id="3_4mrxx"]
[ext_resource type="Script" uid="uid://d222difr0a7n" path="res://scenes/cowpoke.gd" id="3_71j4m"]
[ext_resource type="PackedScene" path="res://scenes/tile_map_layer.tscn" id="4_7iits"]
[ext_resource type="Script" uid="uid://bp542uk03pg7s" path="res://scenes/lasso.gd" id="6_lakw3"]
[ext_resource type="Texture2D" uid="uid://do1jrs4xys21h" path="res://sprites/lasso/lasso.png" id="6_qfnet"]
[ext_resource type="Texture2D" uid="uid://cuh2nu4d6ued1" path="res://sprites/cowpoke/jam_cowpoke_crouch.png" id="8_q5onr"]
[ext_resource type="Texture2D" uid="uid://b1s6dny56ylx1" path="res://sprites/cowpoke/jam_cowpoke_stand.png" id="9_jhx03"]
[ext_resource type="AudioStream" uid="uid://ds22xaf4loke3" path="res://sounds/lasso.ogg" id="9_oo54l"]
[ext_resource type="Texture2D" uid="uid://dup4mc5rv8yb7" path="res://sprites/cowpoke/jam_cowpoke_slide.png" id="10_o8fc1"]
[ext_resource type="Texture2D" uid="uid://dkt4pnxn1ba48" path="res://sprites/cowpoke/jam_cowpoke_fall.png" id="11_dss4m"]
[ext_resource type="Texture2D" uid="uid://bsy0e4pety7wa" path="res://sprites/cowpoke/jam_cowpoke_walk_1.png" id="11_xo05s"]
[ext_resource type="Texture2D" uid="uid://dt3n7c3uqrbqr" path="res://sprites/cowpoke/jam_cowpoke_walk_2.png" id="12_dss4m"]
[ext_resource type="Texture2D" uid="uid://bgpys0uhmrncp" path="res://sprites/cowpoke/jam_cowpoke_jump.png" id="13_7t5mc"]
[ext_resource type="AudioStream" uid="uid://bwu52od8a3i2o" path="res://sounds/jamlevel.ogg" id="13_kpybi"]
[ext_resource type="AudioStream" uid="uid://bljr1a3ksgpuj" path="res://sounds/slide.ogg" id="14_ctatt"]
[ext_resource type="Texture2D" uid="uid://cncuoyafi4snn" path="res://sprites/lasso/rope.png" id="15_7t5mc"]
[ext_resource type="AudioStream" uid="uid://2m7k6k1p1fxv" path="res://sounds/jump.ogg" id="15_xgqkh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7141"]
size = Vector2(26, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfnet"]
size = Vector2(23, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5onr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_q5onr")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_dss4m")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jhx03")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7t5mc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_o8fc1")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jhx03")
}, {
"duration": 1.0,
"texture": ExtResource("11_xo05s")
}, {
"duration": 1.0,
"texture": ExtResource("12_dss4m")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wyf3"]
size = Vector2(12, 31)

[sub_resource type="LabelSettings" id="LabelSettings_7t5mc"]
font_size = 40
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="CaveParallax" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0.5, 0)
motion_mirroring = Vector2(960, 0)

[node name="CaveBGSprite" type="Sprite2D" parent="ParallaxBackground/CaveParallax"]
position = Vector2(0, 135)
texture = ExtResource("1_q5onr")

[node name="ForestParallax" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0.5, 0)
motion_mirroring = Vector2(480, 0)

[node name="ForestBGSprite" type="Sprite2D" parent="ParallaxBackground/ForestParallax"]
position = Vector2(240, 135)
texture = ExtResource("2_o8fc1")

[node name="TransitionParallax" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0.5, 0)

[node name="TransitionBGSprite" type="Sprite2D" parent="ParallaxBackground/TransitionParallax"]
position = Vector2(720, 135)
texture = ExtResource("2_jhx03")

[node name="TileMapLayer" parent="." instance=ExtResource("4_7iits")]

[node name="Lasso" type="Node2D" parent="." node_paths=PackedStringArray("cowpoke", "lasso_point", "rope_point", "lasso_timer")]
script = ExtResource("6_lakw3")
cowpoke = NodePath("../Cowpoke")
lasso_point = NodePath("../Cowpoke/LassoPoint")
rope_point = NodePath("LassoLoop/RopePoint")
lasso_timer = NodePath("LassoLoop/LassoTimer")

[node name="RopeLine" type="Line2D" parent="Lasso"]
texture_filter = 1
texture_repeat = 2
width = 4.0
texture = ExtResource("15_7t5mc")
texture_mode = 1

[node name="LassoLoop" type="CharacterBody2D" parent="Lasso"]
texture_filter = 1
position = Vector2(70, 195)
collision_layer = 4
collision_mask = 0

[node name="LassoSprite" type="Sprite2D" parent="Lasso/LassoLoop"]
texture_filter = 1
position = Vector2(13, -8)
texture = ExtResource("6_qfnet")

[node name="LassoCollision" type="CollisionShape2D" parent="Lasso/LassoLoop"]
position = Vector2(13, -8)
shape = SubResource("RectangleShape2D_i7141")

[node name="WallCollision" type="Area2D" parent="Lasso/LassoLoop"]
position = Vector2(3, -3)
collision_layer = 4

[node name="WallCollisionArea" type="CollisionShape2D" parent="Lasso/LassoLoop/WallCollision"]
position = Vector2(10, -5)
shape = SubResource("RectangleShape2D_i7141")

[node name="RopePoint" type="Node2D" parent="Lasso/LassoLoop"]
position = Vector2(3, -3)

[node name="LassoTimer" type="Timer" parent="Lasso/LassoLoop"]
wait_time = 0.5
one_shot = true

[node name="LassoSfx" type="AudioStreamPlayer" parent="Lasso"]
stream = ExtResource("9_oo54l")
volume_db = -0.05

[node name="Slime" type="CharacterBody2D" parent="." node_paths=PackedStringArray("lassoed_label")]
position = Vector2(400, 208)
collision_layer = 8
script = ExtResource("3_4mrxx")
lassoed_label = NodePath("../Cowpoke/Camera2D/LassoedLabel")

[node name="SlimeSprite" type="Sprite2D" parent="Slime"]
texture_filter = 1
texture = ExtResource("2_4wyf3")

[node name="SlimeCollision" type="CollisionShape2D" parent="Slime"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_qfnet")

[node name="LassoDetector" type="Area2D" parent="Slime"]
collision_layer = 8
collision_mask = 4

[node name="SlimeArea" type="CollisionShape2D" parent="Slime/LassoDetector"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_qfnet")

[node name="Cowpoke" type="CharacterBody2D" parent="." node_paths=PackedStringArray("background")]
position = Vector2(64, 226)
collision_layer = 2
collision_mask = 9
script = ExtResource("3_71j4m")
background = NodePath("../ParallaxBackground")

[node name="BGM" type="AudioStreamPlayer" parent="Cowpoke"]
stream = ExtResource("13_kpybi")

[node name="SlideSfx" type="AudioStreamPlayer" parent="Cowpoke"]
stream = ExtResource("14_ctatt")

[node name="JumpSfx" type="AudioStreamPlayer" parent="Cowpoke"]
stream = ExtResource("15_xgqkh")

[node name="CowpokeSprite" type="AnimatedSprite2D" parent="Cowpoke"]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_q5onr")
animation = &"walk"
frame_progress = 0.574464

[node name="CowpokeCollision" type="CollisionShape2D" parent="Cowpoke"]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_4wyf3")

[node name="LassoPoint" type="Node2D" parent="Cowpoke"]
position = Vector2(6, -31)

[node name="Camera2D" type="Camera2D" parent="Cowpoke"]
position = Vector2(0, -24)

[node name="LassoedLabel" type="Label" parent="Cowpoke/Camera2D"]
visible = false
grow_horizontal = 2
grow_vertical = 2
text = "Lasso'd!"
label_settings = SubResource("LabelSettings_7t5mc")

[connection signal="body_entered" from="Lasso/LassoLoop/WallCollision" to="Lasso" method="_on_wall_collision_body_entered"]
[connection signal="timeout" from="Lasso/LassoLoop/LassoTimer" to="Lasso" method="_on_lasso_timer_timeout"]
[connection signal="body_shape_entered" from="Slime/LassoDetector" to="Slime" method="_on_lasso_detector_body_shape_entered"]
